--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -84,8 +84,8 @@ h1 {
 }
 
 .custom-bg-gradient-xy {
-  background: linear-gradient(to top, black 0%, transparent 50%, black 100%),
-              linear-gradient(to right, black 0%, transparent 50%, black 100%);
+  background: linear-gradient(to top, black 0%, transparent 40%, transparent 80%, black 100%),
+              linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%);
 }
 
 .grid-colors astro-island nav {
