--- a/src/layouts/CourseLayout.astro
+++ b/src/layouts/CourseLayout.astro
@@ -58,7 +58,7 @@ const info = Astro.currentLocale === "en" ? enData : esData;
     </div>
     <aside class="flex-1 flex flex-col gap-10 max-w-xl mx-auto">
       <div class="bg-white rounded-xl p-10 flex flex-col gap-5 shadow-sm">
-        <h4 class="text-3xl">{info.sidebarTitle}</h4>
+        <h4 class="text-3xl text-main-black">{info.sidebarTitle}</h4>
         <hr />
         <ul class="flex flex-col gap-2 my-3">
           {
