--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,8 @@ import StudentsHangar from "../assets/estudiantes-frente-a-hangares-de-ifly.webp
 import TestimonialsBG from "../assets/piloto-con-sobrecargos-de-aviacion.jpg";
 import CTAImage from "../components/CTAImage.astro";
 import Welcome from "../components/Welcome.astro";
+import Counters from "../components/Counters.astro";
+import Carreers from "../components/Carreers.astro";
 
 ---
 
@@ -25,110 +27,8 @@ import Welcome from "../components/Welcome.astro";
   <HomepageHeader slot="header" />
   <PlaneClouds />
   <Welcome />
-
-  <!-- <section id="bienvenido" class="scroll-my-24 custom-bg-gradient-b relative overflow-hidden">
-    <Image
-      src={BgTextureDown}
-      alt="Texture used for background"
-      class="absolute inset-0 -z-50 object-cover object-center w-full h-full"
-    />
-
-    <div
-      class="max-w-[70vw] lg:max-w-[50vw] mx-auto px-5 py-24 flex flex-col-reverse lg:flex-row gap-20 items-center"
-    >
-      <div class="flex-1 flex justify-center items-center content-center flex-col gap-5 lg:text-center">
-        <Image
-          src={LogoWhiteNoText}
-          alt="iFly logo in white"
-          class="w-24"
-        />
-        <h2 class="uppercase text-main-blue text-2xl lg:text-4xl font-bold tracking-widest text-center">
-          Bienvenido a iFly
-        </h2>
-        <h3 class="text-xl lg:text-3xl font-bold">
-          Somos la primera universidad aeronáutica para pilotos aviadores en
-          México
-        </h3>
-        <p>
-          Te preparamos para ser un profesional en las alturas. Ya sea que optes
-          por nuestra carrera de Pro Pilot y obtengas un título de Técnico
-          Superior Universitario, o por la licenciatura en Aviation Management
-          (Gestión Aeronáutica) y obtengas un título de Licenciado. <br/> <br/> Al final de
-          las carreras obtendrás la licencia de Piloto Comercial de Ala Fija con
-          la que podrás laborar en cualquier área de la aviación civil.
-        </p>
-        <a href="/nosotros/historia" class="btn-primary">Sobre Nosotros</a>
-      </div>
-    </div>
-  </section>
- -->
-  <section class="bg-main-black/5 relative pb-[30vh] custom-bg-gradient-t">
-    <div class="overflow-hidden h-[60vh] relative">
-      <Image
-          src={StudentsHangar}
-          alt="iFly students posing in front of hangar"
-          class="absolute inset-0 object-cover object-center w-full h-full border-blue-y"
-      />
-    </div>
-    <Image
-      src={BgTextureUp}
-      alt="Texture used for background"
-      class="absolute inset-0 -z-50 object-cover object-center w-full h-full"
-    />
-
-    
-    <div class="relative -top-[60px] mx-auto max-w-7xl grid sm:grid-cols-2 lg:grid-cols-4 grid-colors">
-      {
-        stats.map((stat) => (
-          <CounterCard
-            client:only="react"
-            value={stat.value}
-            title={stat.title}
-          />
-        ))
-      }
-    </div>
-  </section>
-
-  <section class="text-white relative z-20">
-    <div
-      class="max-w-7xl mx-auto px-5 flex flex-col gap-20 items-center relative -top-[130px]"
-    >
-      <div class="flex flex-col gap-5 max-w-xl justify-center items-center content-center text-center">
-        <h2 class="uppercase font-bold text-main-blue text-xl lg:text-3xl tracking-tight">
-          Nuestras Carreras
-        </h2>
-        <h3 class="lg:text-xl text-main-blue">
-          Conoce nuestros programas de estudio
-        </h3>
-        <p class="lg:text-2xl text-left w-[70vw] lg:w-[50vw]">
-          En iFly te oferecemos programas de estudio para que te conviertas en
-          un profesional de la aviación civil. Conoce nuestros programas y
-          elige el que más se adapte a tus necesidades.
-        </p>
-      </div>
-
-      <div class="flex-col gap-10">
-        {
-          programs
-            .slice(0, 3)
-            .map((program) => (
-              <ProgramCard
-                title={program.data.title}
-                subTitle={program.data.subTitle}
-                description={program.data.description}
-                imagePath={program.data.headerImage}
-                url={program.data.url}
-              />
-            ))
-        }
-      </div>
-      <a
-        href="/por-que-ser-piloto#programas"
-        class="btn-primary w-full max-w-lg">Ver Todos</a
-      >
-    </div>
-  </section>
+  <Counters />
+  <Carreers slice={true} />
 
   <section class="flex flex-col items-center relative -top-52 custom-bg-gradient-xy min-h-[80vh] lg:min-h-[60vw]">
     <Image
