Update index pages using new components

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,21 +1,13 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import HomepageHeader from "../../components/HomepageHeader.astro";
-import { Image } from "astro:assets";
-import CounterCard from "../../components/CounterCard";
-import stats from "../../data/en/stats";
-import programs from "../../data/en/programs";
-import ProgramCard from "../../components/ProgramCard.astro";
 import IndexForm from "../../components/IndexForm.astro";
 import PlaneClouds from "../../components/PlaneClouds.astro";
-import BgTextureDown from "../../assets/bg-texture-down.jpg";
-import BgTextureUp from "../../assets/bg-texture-up.jpg";
-import LogoWhiteNoText from "../../assets/ifly-logo-white-no-text.png";
-import StudentsHangar from "../../assets/estudiantes-frente-a-hangares-de-ifly.webp";
-import TestimonialsBG from "../../assets/piloto-con-sobrecargos-de-aviacion2.jpg";
 import CTAImage from "../../components/CTAImage.astro";
 import Welcome from "../../components/Welcome.astro";
 import Counters from "../../components/Counters.astro";
+import Carreers from "../../components/Carreers.astro";
+import Testimonials from "../../components/Testimonials.astro";
 
 ---
 
@@ -23,94 +15,12 @@ import Counters from "../../components/Counters.astro";
   siteTitle="iFly Aeronautical University - Comprehensive Training for Pilots and Aviation Professionals"
   siteDescription="Welcome to iFly, Mexico's first aeronautical university. Prepare to achieve your dream of flying with programs for pilots, operations officers, flight attendants, and more. Get your Commercial Pilot License today!"
 >
-<HomepageHeader slot="header" />
-<PlaneClouds />
-<Welcome />
-<Counters />
-
-  <section class="text-white relative z-20">
-    <div
-      class="max-w-7xl mx-auto px-5 flex flex-col gap-20 items-center relative -top-[130px]"
-    >
-      <div class="flex flex-col gap-5 max-w-xl justify-center items-center content-center text-center">
-        <h2 class="uppercase font-bold text-main-blue text-xl lg:text-3xl tracking-tight">
-          Our Programs
-        </h2>
-        <h3 class="lg:text-xl text-main-blue">
-          Learn about our study programs
-        </h3>
-        <p class="lg:text-2xl text-left w-[70vw] lg:w-[50vw]">
-          At iFly, we offer study programs to help you become a professional in
-          civil aviation. Explore our programs and choose the one that best fits your needs.
-        </p>
-      </div>
-
-      <div class="flex-col gap-10">
-        {
-          programs
-            .slice(0, 3)
-            .map((program) => (
-              <ProgramCard
-                title={program.data.title}
-                subTitle={program.data.subTitle}
-                description={program.data.description}
-                imagePath={program.data.headerImage}
-                url={program.data.url}
-              />
-            ))
-        }
-      </div>
-      <a
-        href="/why-become-a-pilot#programs"
-        class="btn-primary w-full max-w-lg">See All</a
-      >
-    </div>
-  </section>
-
-  <section class="lg:pb-60 flex flex-col gap-20 items-center relative -top-52 custom-bg-gradient-xy min-h-[100vh] lg:min-h-[87vw] lg:mb-60">
-    <Image
-      src={TestimonialsBG}
-      alt="Student in iFly hangar"
-      class="absolute inset-0 -z-50 object-cover object-center w-full h-full"
-    /> 
-    
-      <div
-        class="max-w-[80vw] lg:max-w-[60vw] flex-1 flex flex-col gap-5 justify-center items-center content-center text-center mx-5 sm:mx-10 lg:mx-0 bg-sec-blue border-2 p-5 lg:p-14 z-10 absolute bottom-0 overflow-hidden"
-      >
-        <Image
-          src={LogoWhiteNoText}
-          alt="iFly logo in white"
-          class="w-44 absolute -left-11 -top-3 -z-50 filter-opacity-20"
-        />
-
-        <h2 class="uppercase font-bold text-main-blue text-xl lg:text-3xl tracking-tight">
-          Testimonials
-        </h2>
-        <h3 class="lg:text-xl text-main-blue border-fade-light pb-2">
-          Learn about our students' experiences
-        </h3>
-        <quote class="max-w-[60%] text-left flex flex-col">
-          "iFly is the family that saw me grow into a professional aviator pilot and
-          helped me fulfill one of my greatest dreams. It is a pleasure and an honor
-          for me to have trained in this great family."
-          <br/>
-          <cite class="text-right font-semibold">- Roberto Novelo Cicero (Aviator Pilot)</cite
-          >
-        </quote>
-
-      </div>
-  </section>
-
+  <HomepageHeader slot="header" />
+  <PlaneClouds />
+  <Welcome />
+  <Counters />
+  <Carreers slice={true} />
+  <Testimonials />
   <CTAImage />
   <IndexForm />
 </BaseLayout>
-
-<!-- <script>
-  const userLang = navigator.language;
-
-  if (userLang.startsWith("en")) {
-    window.location.href = "/en";
-  } else {
-    window.location.href = "/";
-  }
-</script> -->
