--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,23 +13,28 @@ if (!images[data.headerImage]) {
 ---
 
 <header
-  class="relative isolate pt-14 overflow-hidden h-[40vh] lg:h-[65vh] text-white flex
-    items-center"
+  class="relative isolate pt-14 overflow-hidden h-[70vh] lg:h-[90vh] text-white flex
+    items-center bg-no-repeat bg-cover bg-center"
+  style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(${data.headerImage});`
 >
-  <Image
-    src={images[data.headerImage]()}
-    alt={data.headerAlt}
-    class="absolute top-0 w-full h-full object-cover -z-50"
-  />
-
-  <div class="absolute inset-0 bg-main-black/60 -z-40"></div>
   <div
-    class="flex w-full max-w-7xl mx-auto px-5 font-medium flex-col gap-4 lg:gap-8"
+    class="flex w-[20vw] max-w-7xl ml-28 px-5 font-medium flex-col"
   >
     <h1
-      class="text-4xl tracking-wider max-w-xl lg:text-6xl font-extrabold lg:max-w-4xl text-center mx-auto"
+      class="text-6xl tracking-wider max-w-xl lg:text-8xl font-extrabold lg:max-w-4xl"
     >
       {data.title}
     </h1>
+    <p class="text-5xl">
+      ::::::::
+    </p>
+    <h2 class="text-4xl lg:text-6xl">
+      {data.subTitle}
+    </h2>
+    <p>
+      {data.description}
+    </p>
+    
   </div>
 </header>
+<div class="border-bottom-blue"></div>
