--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -110,3 +110,8 @@ h1 {
   filter: opacity(0.20);
 }
 
+.border-bottom-blue {
+  border-bottom: 6px solid black;
+  border-image: linear-gradient(to right, transparent 20%, #00a3e4 50%, transparent 80%) 1;
+  border-style: solid;
+}
