--- a/src/components/Counters.astro
+++ b/src/components/Counters.astro
@@ -36,7 +36,7 @@ const stats = Astro.currentLocale === "en" ? enStats : esStats;
   />
 
   
-  <div class="relative -top-[60px] mx-auto max-w-7xl grid sm:grid-cols-2 lg:grid-cols-4 grid-colors">
+  <div class="relative -top-[60px] mx-auto max-w-7xl grid grid-cols-2 lg:grid-cols-4 grid-colors">
     {
       stats.map((stat) => (
         <CounterCard
