--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ if (!images[data.headerImage]) {
   style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(${data.headerImage});`
 >
   <div
-    class="flex w-[20vw] max-w-7xl ml-28 px-5 font-medium flex-col"
+    class="flex w-[30vw] max-w-7xl ml-28 px-5 font-medium flex-col"
   >
     <h1
       class="text-6xl tracking-wider max-w-xl lg:text-8xl font-extrabold lg:max-w-4xl"
@@ -31,7 +31,7 @@ if (!images[data.headerImage]) {
     <h2 class="text-4xl lg:text-6xl">
       {data.subTitle}
     </h2>
-    <p>
+    <p class="text-lg lg:text-xl">
       {data.description}
     </p>
     
