--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,25 +13,25 @@ if (!images[data.headerImage]) {
 ---
 
 <header
-  class="relative isolate pt-14 overflow-hidden h-[70vh] lg:h-[90vh] text-white flex
+  class="relative isolate pt-20 overflow-hidden min-h-[70vh] lg:h-[90vh] text-white flex
     items-center bg-no-repeat bg-cover bg-center"
   style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(${data.headerImage});`
 >
   <div
-    class="flex w-[30vw] max-w-7xl ml-28 px-5 font-medium flex-col"
+    class="flex w-[50vw] lg:w-[30vw] max-w-7xl lg:ml-28 px-5 font-medium flex-col"
   >
     <h1
-      class="text-6xl tracking-wider max-w-xl lg:text-8xl font-extrabold lg:max-w-4xl"
+      class="text-4xl md:text-6xl lg:text-8xl tracking-wider max-w-xl font-extrabold lg:max-w-4xl"
     >
       {data.title}
     </h1>
     <p class="text-5xl">
       ::::::::
     </p>
-    <h2 class="text-4xl lg:text-6xl">
+    <h2 class="text-2xl md:text-4xl lg:text-6xl">
       {data.subTitle}
     </h2>
-    <p class="text-lg lg:text-xl">
+    <p class="text-md md:text-lg lg:text-xl">
       {data.description}
     </p>
     
