--- a/src/components/ContactUsHeader.astro
+++ b/src/components/ContactUsHeader.astro
@@ -15,7 +15,7 @@ if (!images[data.headerImage]) {
 <header
   class="relative isolate pt-14 overflow-hidden min-h-fit h-[40vh] lg:h-[85vh] text-white flex
     items-center bg-bottom bg-cover"
-  style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.5) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(${data.headerImage})`
+  style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.5) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(./${data.headerImage})`
 >
   <div
     class="flex flex-col items-center gap-4 lg:gap-8 sm:translate-y-20 mx-auto"
