--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ if (!images[data.headerImage]) {
 <header
   class="relative isolate pt-20 overflow-hidden min-h-[70vh] lg:h-[90vh] text-white flex
     items-center bg-no-repeat bg-cover bg-center"
-  style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(./${data.headerImage});`
+  style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(${data.headerImage});`
 >
   <div
     class="flex w-[50vw] lg:w-[30vw] max-w-7xl lg:ml-28 px-5 font-medium flex-col"
