--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -51,132 +51,76 @@ const navbarLinks =
   Astro.currentLocale === "en" ? enNavbarLinks : esNavbarLinks;
 ---
 
-<footer class="bg-main-black pt-24 px-5">
-  <div class="text-white max-w-xl lg:max-w-7xl mx-auto">
+<footer class="bg-black pt-24 px-5 z-50 relative">
+  <div
+    class="text-white max-w-xl lg:max-w-7xl mx-auto border-t border-gray-400 pt-10"
+  >
     <div class="flex gap-10 flex-col lg:flex-row">
-      <div class="flex flex-col gap-5 lg:w-1/3">
-        <a
-          href={`${lang === "en" ? "/en" : "/"}`}
-          class="text-4xl font-bold uppercase"
-        >
-          <Image src={whiteLogo} alt="iFly Logo" class="w-40" />
-        </a>
-        <p class="text-gray-400 font-medium max-w-xl">
-          {data.summary}
-        </p>
-        <div class="flex space-x-6">
-          <a
-            href={FACEBOOK_URL}
-            target="_blank"
-            class="text-gray-400 hover:text-main-blue duration-200"
-          >
-            <span class="sr-only">Facebook</span>
-            <svg
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-              aria-hidden="true"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
-                clip-rule="evenodd"></path>
-            </svg>
-          </a>
-          <a
-            href={INSTAGRAM_URL}
-            target="_blank"
-            class="text-gray-400 hover:text-main-blue duration-200"
-          >
-            <span class="sr-only">Instagram</span>
-            <svg
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-              aria-hidden="true"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
-                clip-rule="evenodd"></path>
-            </svg>
-          </a>
-          <a
-            href={WHATSAPP_URL}
-            target="_blank"
-            class="text-gray-400 hover:text-main-blue duration-200"
-          >
-            <span class="sr-only">Whatsapp</span>
-            <svg
-              class="size-6"
-              fill="currentColor"
-              xmlns="http://www.w3.org/2000/svg"
-              width="1em"
-              height="1em"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill="currentColor"
-                d="M19.05 4.91A9.82 9.82 0 0 0 12.04 2c-5.46 0-9.91 4.45-9.91 9.91c0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21c5.46 0 9.91-4.45 9.91-9.91c0-2.65-1.03-5.14-2.9-7.01m-7.01 15.24c-1.48 0-2.93-.4-4.2-1.15l-.3-.18l-3.12.82l.83-3.04l-.2-.31a8.26 8.26 0 0 1-1.26-4.38c0-4.54 3.7-8.24 8.24-8.24c2.2 0 4.27.86 5.82 2.42a8.18 8.18 0 0 1 2.41 5.83c.02 4.54-3.68 8.23-8.22 8.23m4.52-6.16c-.25-.12-1.47-.72-1.69-.81c-.23-.08-.39-.12-.56.12c-.17.25-.64.81-.78.97c-.14.17-.29.19-.54.06c-.25-.12-1.05-.39-1.99-1.23c-.74-.66-1.23-1.47-1.38-1.72c-.14-.25-.02-.38.11-.51c.11-.11.25-.29.37-.43s.17-.25.25-.41c.08-.17.04-.31-.02-.43s-.56-1.34-.76-1.84c-.2-.48-.41-.42-.56-.43h-.48c-.17 0-.43.06-.66.31c-.22.25-.86.85-.86 2.07s.89 2.4 1.01 2.56c.12.17 1.75 2.67 4.23 3.74c.59.26 1.05.41 1.41.52c.59.19 1.13.16 1.56.1c.48-.07 1.47-.6 1.67-1.18c.21-.58.21-1.07.14-1.18s-.22-.16-.47-.28"
-              ></path>
-            </svg>
-          </a>
-        </div>
-      </div>
-
       <div class="flex flex-col gap-3">
-        <h3 class="font-semibold pb-5">{data.careers}</h3>
-        <ul class="flex flex-col gap-2 text-gray-400">
-          {
-            programs.map((program) => (
-              <li>
-                <a
-                  href={program.data.url}
-                  class="hover:text-main-blue duration-200 font-medium"
-                >
-                  {program.data.title}
-                </a>
-              </li>
-            ))
-          }
-        </ul>
-      </div>
-      <div class="flex flex-col gap-3 lg:min-w-36">
-        <h3 class="font-semibold pb-5">{data.aboutUs}</h3>
-        <ul class="flex flex-col gap-2 text-gray-400">
-          {
-            navbarLinks[3].submenu.map((link) => (
-              <li>
-                <a
-                  href={link.link}
-                  class="hover:text-main-blue duration-200 font-medium"
-                >
-                  {link.name}
-                </a>
-              </li>
-            ))
-          }
-          <li>
-            <a
-              href={navbarLinks[4].link}
-              class="hover:text-main-blue duration-200 font-medium"
-            >
-              {navbarLinks[4].name}
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="flex flex-col gap-3">
-        <h3 class="font-semibold pb-5">{data.contact}</h3>
         <ul class="flex flex-col gap-1 text-gray-400 font-medium">
           <li class="flex gap-2 group items-center">
-            <MdEmail
-              className="size-4 group-hover:text-main-blue duration-200"
-            />
             <a
-              class="group-hover:text-main-blue duration-200"
+              class="group-hover:text-main-blue duration-200 text-4xl"
               href=`mailto:${EMAIL_ADDRESS}`>{EMAIL_ADDRESS}</a
             >
+          </li>
+          <li class="flex space-x-3 my-5">
+            <a
+              href={FACEBOOK_URL}
+              target="_blank"
+              class="text-gray-400 hover:text-main-blue duration-200"
+            >
+              <span class="sr-only">Facebook</span>
+              <svg
+                class="h-6 w-6"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </a>
+            <a
+              href={INSTAGRAM_URL}
+              target="_blank"
+              class="text-gray-400 hover:text-main-blue duration-200"
+            >
+              <span class="sr-only">Instagram</span>
+              <svg
+                class="h-6 w-6"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </a>
+            <a
+              href={WHATSAPP_URL}
+              target="_blank"
+              class="text-gray-400 hover:text-main-blue duration-200"
+            >
+              <span class="sr-only">Whatsapp</span>
+              <svg
+                class="size-6"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+                width="1em"
+                height="1em"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="currentColor"
+                  d="M19.05 4.91A9.82 9.82 0 0 0 12.04 2c-5.46 0-9.91 4.45-9.91 9.91c0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21c5.46 0 9.91-4.45 9.91-9.91c0-2.65-1.03-5.14-2.9-7.01m-7.01 15.24c-1.48 0-2.93-.4-4.2-1.15l-.3-.18l-3.12.82l.83-3.04l-.2-.31a8.26 8.26 0 0 1-1.26-4.38c0-4.54 3.7-8.24 8.24-8.24c2.2 0 4.27.86 5.82 2.42a8.18 8.18 0 0 1 2.41 5.83c.02 4.54-3.68 8.23-8.22 8.23m4.52-6.16c-.25-.12-1.47-.72-1.69-.81c-.23-.08-.39-.12-.56.12c-.17.25-.64.81-.78.97c-.14.17-.29.19-.54.06c-.25-.12-1.05-.39-1.99-1.23c-.74-.66-1.23-1.47-1.38-1.72c-.14-.25-.02-.38.11-.51c.11-.11.25-.29.37-.43s.17-.25.25-.41c.08-.17.04-.31-.02-.43s-.56-1.34-.76-1.84c-.2-.48-.41-.42-.56-.43h-.48c-.17 0-.43.06-.66.31c-.22.25-.86.85-.86 2.07s.89 2.4 1.01 2.56c.12.17 1.75 2.67 4.23 3.74c.59.26 1.05.41 1.41.52c.59.19 1.13.16 1.56.1c.48-.07 1.47-.6 1.67-1.18c.21-.58.21-1.07.14-1.18s-.22-.16-.47-.28"
+                ></path>
+              </svg>
+            </a>
           </li>
           <li class="flex gap-2 group items-center">
             <FaPhone
@@ -215,18 +159,74 @@ const navbarLinks =
           <li>
             <a
               href="/"
-              class="border border-transparent p-2 hover:border-gray-400 duration-300"
-              >🇲🇽 Español</a
+              class={`${lang === "es" ? "bg-gray-700" : ""} border py-2 px-4 border-gray-400 hover:bg-gray-700 duration-300`}
+              >Español</a
             >
           </li>
           <li>
             <a
               href="/en"
-              class="border border-transparent p-2 hover:border-gray-400 duration-300"
-              >🇺🇸 English</a
+              class={`${lang === "en" ? "bg-gray-700" : ""} border py-2 px-4 border-gray-400 hover:bg-gray-700 duration-300`}
+              >English</a
             >
           </li>
         </ul>
+      </div>
+
+      <div class="flex flex-col gap-3">
+        <h3 class="font-semibold pb-5 text-main-blue">{data.careers}</h3>
+        <ul class="flex flex-col gap-2 text-gray-400">
+          {
+            programs.map((program) => (
+              <li>
+                <a
+                  href={program.data.url}
+                  class="hover:text-main-blue duration-200 font-medium"
+                >
+                  {program.data.title}
+                </a>
+              </li>
+            ))
+          }
+        </ul>
+      </div>
+
+      <div class="flex flex-col gap-3 lg:min-w-36">
+        <h3 class="font-semibold text-main-blue pb-5">{data.aboutUs}</h3>
+        <ul class="flex flex-col gap-2 text-gray-400">
+          {
+            navbarLinks[3].submenu.map((link) => (
+              <li>
+                <a
+                  href={link.link}
+                  class="hover:text-main-blue duration-200 font-medium"
+                >
+                  {link.name}
+                </a>
+              </li>
+            ))
+          }
+          <li>
+            <a
+              href={navbarLinks[4].link}
+              class="hover:text-main-blue duration-200 font-medium"
+            >
+              {navbarLinks[4].name}
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="flex flex-col gap-5 lg:w-1/3">
+        <a
+          href={`${lang === "en" ? "/en" : "/"}`}
+          class="text-4xl font-bold uppercase"
+        >
+          <Image src={whiteLogo} alt="iFly Logo" class="w-40" />
+        </a>
+        <p class="text-gray-400 font-medium max-w-xl">
+          {data.summary}
+        </p>
       </div>
     </div>
     <div
