fix bg image paths

--- a/src/components/Carreers.astro
+++ b/src/components/Carreers.astro
@@ -62,7 +62,7 @@ const programsSlice = slice ? programs.slice(0, 3) : programs;
               title={program.data.title}
               subTitle={program.data.subTitle}
               description={program.data.description}
-              imagePath={program.data.headerImage}
+              imagePath={program.data.primaryImage}
               url={program.data.url}
             />
           ))
