--- a/src/layouts/CourseLayout.astro
+++ b/src/layouts/CourseLayout.astro
@@ -38,7 +38,7 @@ const enData = {
     "Do you want to know more about the program? Schedule a visit to our campus and meet one of our certified instructors.",
 };
 
-const imageURL = "../src/assets/flota.webp";
+const imageURL = "./../images/flota.webp";
 const lang = Astro.currentLocale === "en" ? "en" : "es";
 const info = Astro.currentLocale === "en" ? enData : esData;
 ---
