--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,15 @@
 ---
-import { Image } from "astro:assets";
-import type { ImageMetadata } from "astro";
+// import { Image } from "astro:assets";
+// import type { ImageMetadata } from "astro";
 const { data } = Astro.props;
-const images = import.meta.glob<{ default: ImageMetadata }>(
-  "/src/assets/*.{jpeg,jpg,png,gif,webp}",
-);
-if (!images[data.headerImage]) {
-  throw new Error(
-    `"${data.headerImage}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,webp}"`,
-  );
-}
+// const images = import.meta.glob<{ default: ImageMetadata }>(
+//   "/src/assets/*.{jpeg,jpg,png,gif,webp}",
+// );
+// if (!images[data.headerImage]) {
+//   throw new Error(
+//     `"${data.headerImage}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,webp}"`,
+//   );
+// }
 ---
 
 <header
@@ -17,6 +17,14 @@ if (!images[data.headerImage]) {
     items-center bg-no-repeat bg-cover bg-center"
   style=`background-image: linear-gradient(to top, black 0%, rgba(0, 0, 0, 0.1) 50%, black 100%), linear-gradient(to right, black 0%, transparent 10%, transparent 90%, black 100%), url(./${data.headerImage});`
 >
+  <!-- <Image
+  src={images[data.headerImage]()}
+  alt={data.headerAlt}
+  class="absolute top-0 w-full h-full object-cover -z-50"
+  />
+
+  <div class="absolute inset-0 bg-main-black/60 -z-40"></div> -->
+
   <div
     class="flex w-[50vw] lg:w-[30vw] max-w-7xl lg:ml-28 px-5 font-medium flex-col"
   >
