--- a/src/pages/por-que-ser-piloto.astro
+++ b/src/pages/por-que-ser-piloto.astro
@@ -154,7 +154,7 @@ const data = {
             <ProgramCard
               title={program.data.title}
               description={program.data.description}
-              imagePath={program.data.headerImage}
+              imagePath={program.data.primaryImage}
               url={program.data.url}
             />
           ))
